--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-system-ui": "~5.0.5",
     "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.8.3"
   }
 }
