Integrate Tavus LiveKit Agent

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.0",
+    "@livekit/react-native": "^2.5.0",
+    "@livekit/react-native-webrtc": "^125.0.7",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
