--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "^53.0.0",
+    "expo": "53.0.12",
     "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
+    "expo-camera": "16.1.8",
     "expo-constants": "~17.1.3",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
-    "expo-router": "~5.0.2",
-    "expo-secure-store": "~14.1.1",
+    "expo-router": "5.1.0",
+    "expo-secure-store": "14.2.3",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
-    "expo-web-browser": "~14.1.5",
+    "expo-system-ui": "5.0.9",
+    "expo-web-browser": "14.2.0",
     "lucide-react-native": "^0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
