--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.55.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.1.0",
